--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
     <!-- Hero Section -->
     <header class="hero-section">
         <div class="container hero-content">
+            <img src="res/img/syb_logo.png" style="height: 100px;">
             <h1 class="hero-title">SYB讲师培训</h1>
             <p class="hero-subtitle">精彩照片分享 · 视频回顾</p>
         </div>
@@ -429,6 +430,9 @@
 
     <!-- Video Section -->
     <section class="video-section">
+        <div class="container-logo">
+
+        </div>
         <div class="container">
             <div class="gallery-header">
                 <h2 class="gallery-title">培训视频回顾</h2>
