--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
     <header class="hero-section">
         <div class="container hero-content">
             <img src="res/img/syb_logo.png" style="height: 100px;">
-            <h1 class="hero-title">SYB讲师培训</h1>
+            <h1 class="hero-title">2025年邵阳市第一期创业培训之SYB讲师培训</h1>
             <p class="hero-subtitle">精彩照片分享 · 视频回顾</p>
         </div>
     </header>
@@ -522,8 +522,8 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 SYB讲师培训项目组 版权所有</p>
-            <p class="mt-2">联系我们：syb@example.com</p>
+            <p>&copy; 2025 SYB讲师培训项目组 版权所有</p>
+            <p class="mt-2">联系我们：hysonglet@qq.com</p>
         </div>
     </footer>
 
