--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
             <div class="video-grid">
                 <div class="video-item">
                     <div class="video-wrapper">
-                        <iframe src="res/video/李秀君.mp4" scrolling="no" border="0" frameborder="no" framespacing="0"
+                        <iframe src="res/video/1.mp4" scrolling="no" border="0" frameborder="no" framespacing="0"
                             allowfullscreen="true">
                         </iframe>
                     </div>
@@ -452,18 +452,7 @@
                 </div>
                 <div class="video-item">
                     <div class="video-wrapper">
-                        <iframe src="res/video/李秀君.mp4" scrolling="no" border="0" frameborder="no" framespacing="0"
-                            allowfullscreen="true">
-                        </iframe>
-                    </div>
-                    <div class="video-info">
-                        <h3 class="video-title">培训课程集锦</h3>
-                        <p class="video-description">专业讲师授课，精彩内容回顾</p>
-                    </div>
-                </div>
-                <div class="video-item">
-                    <div class="video-wrapper">
-                        <iframe src="res/video/李秀君.mp4" scrolling="no" border="0" frameborder="no" framespacing="0"
+                        <iframe src="res/video/1.mp4" scrolling="no" border="0" frameborder="no" framespacing="0"
                             allowfullscreen="true">
                         </iframe>
                     </div>
@@ -534,82 +523,98 @@
                 id: 1,
                 title: "开班仪式",
                 description: "SYB讲师培训正式开班",
-                media: "res/img/罗隆华.png",
+                media: "res/img/开班2.jpeg",
                 type: "photo",
                 category: "ceremony"
             },
             {
                 id: 2,
-                title: "团队建设",
-                description: "讲师团队破冰活动",
-                media: "res/img/罗隆华.png",
+                title: "开班仪式",
+                description: "SYB讲师培训正式开班",
+                media: "res/img/开班.jpeg",
+                type: "photo",
+                category: "ceremony"
+            },
+            {
+                id: 3,
+                title: "小组交流",
+                description: "分组讨论话题",
+                media: "res/img/269.jpg",
                 type: "photo",
                 category: "activity"
             },
             {
-                id: 3,
-                title: "课程研讨",
-                description: "深入探讨教学方法",
-                media: "res/img/罗隆华.png",
-                type: "photo",
-                category: "training"
-            },
-            {
                 id: 4,
-                title: "实践演练",
-                description: "讲师现场教学展示",
-                media: "res/img/罗隆华.png",
+                title: "小组交流",
+                description: "分组讨论话题",
+                media: "res/img/228.jpg",
                 type: "photo",
-                category: "practice"
+                category: "activity"
             },
             {
                 id: 5,
-                title: "经验分享",
-                description: "资深讲师经验交流",
-                media: "res/img/罗隆华.png",
+                title: "实战演练",
+                description: "实战检验学习成果",
+                media: "res/img/860.jpg",
                 type: "photo",
                 category: "training"
             },
             {
                 id: 6,
-                title: "结业典礼",
-                description: "培训圆满结束",
-                media: "res/img/罗隆华.png",
-                type: "photo",
-                category: "ceremony"
-            },
-            {
-                id: 7,
-                title: "小组讨论",
-                description: "分组讨论教学方案",
-                media: "res/img/罗隆华.png",
+                title: "实战演练",
+                description: "实战检验学习成果",
+                media: "res/img/936.jpg",
                 type: "photo",
                 category: "training"
             },
             {
-                id: 8,
-                title: "户外拓展",
-                description: "团队户外拓展活动",
-                media: "res/img/罗隆华.png",
-                type: "photo",
-                category: "activity"
-            },
-            {
-                id: 9,
-                title: "教学演示",
-                description: "优秀讲师教学演示",
-                media: "res/img/罗隆华.png",
+                id: 7,
+                title: "实战演练",
+                description: "讲师现场教学展示",
+                media: "res/img/144.jpg",
                 type: "photo",
                 category: "practice"
             },
             {
+                id: 8,
+                title: "经验分享",
+                description: "资深讲师经验交流",
+                media: "res/img/482.jpg",
+                type: "photo",
+                category: "training"
+            },
+            {
+                id: 9,
+                title: "小组讨论",
+                description: "分组讨论教学方案",
+                media: "res/img/961.jpg",
+                type: "photo",
+                category: "training"
+            },
+            {
                 id: 10,
-                title: "培训花絮",
-                description: "培训期间精彩花絮",
-                media: "res/video/李秀君.mp4",
-                type: "video",
+                title: "实战演练",
+                description: "讲师现场教学展示",
+                media: "res/img/019.jpg",
+                type: "photo",
                 category: "activity"
-            }
+            },
+            {
+                id: 11,
+                title: "实战演练",
+                description: "优秀讲师教学演示",
+                media: "res/img/041.jpg",
+                type: "photo",
+                category: "practice"
+            },
+            // {
+            //     id: 10,
+            //     title: "培训花絮",
+            //     description: "培训期间精彩花絮",
+            //     media: "res/video/1.mp4",
+            //     type: "video",
+            //     category: "activity"
+            // }
         ];
 
         let currentView = 'masonry';
