changes some images

--- a/index.html
+++ b/index.html
@@ -607,6 +607,22 @@
                 type: "photo",
                 category: "practice"
             },
+            {
+                id: 12,
+                title: "小组讨论",
+                description: "分组讨论教学方案",
+                media: "res/img/485.jpg",
+                type: "photo",
+                category: "training"
+            },
+            {
+                id: 13,
+                title: "实战演练",
+                description: "优秀讲师教学演示",
+                media: "res/img/906.jpg",
+                type: "photo",
+                category: "practice"
+            },
             // {
             //     id: 10,
             //     title: "培训花絮",
