changes some video

--- a/index.html
+++ b/index.html
@@ -623,14 +623,46 @@
                 type: "photo",
                 category: "practice"
             },
-            // {
-            //     id: 10,
-            //     title: "培训花絮",
-            //     description: "培训期间精彩花絮",
-            //     media: "res/video/1.mp4",
-            //     type: "video",
-            //     category: "activity"
-            // }
+            {
+                id: 14,
+                title: "培训花絮",
+                description: "培训期间精彩花絮",
+                media: "res/video/2.mp4",
+                type: "video",
+                category: "activity"
+            },
+            {
+                id: 15,
+                title: "培训花絮",
+                description: "培训期间精彩花絮",
+                media: "res/video/3.mp4",
+                type: "video",
+                category: "activity"
+            },
+            {
+                id: 16,
+                title: "培训花絮",
+                description: "培训期间精彩花絮",
+                media: "res/video/4.mp4",
+                type: "video",
+                category: "activity"
+            },
+            {
+                id: 17,
+                title: "培训花絮",
+                description: "培训期间精彩花絮",
+                media: "res/video/5.mp4",
+                type: "video",
+                category: "activity"
+            },
+            {
+                id: 18,
+                title: "培训花絮",
+                description: "培训期间精彩花絮",
+                media: "res/video/6.mp4",
+                type: "video",
+                category: "activity"
+            }
         ];
 
         let currentView = 'masonry';
