--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                         <p class="video-description">SYB讲师培训开班仪式全程回顾，见证新的开始</p>
                     </div>
                 </div>
-                <div class="video-item">
+                <!-- <div class="video-item">
                     <div class="video-wrapper">
                         <iframe src="res/video/1.mp4" scrolling="no" border="0" frameborder="no" framespacing="0"
                             allowfullscreen="true">
@@ -460,7 +460,7 @@
                         <h3 class="video-title">团队活动掠影</h3>
                         <p class="video-description">团队协作，共同成长</p>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
