--- a/index.html
+++ b/index.html
@@ -662,7 +662,39 @@
                 media: "res/video/6.mp4",
                 type: "video",
                 category: "activity"
-            }
+            },
+            {
+                id: 19,
+                title: "结束仪式",
+                description: "培训结束仪式",
+                media: "res/img/3.jpg",
+                type: "photo",
+                category: "activity"
+            },
+            {
+                id: 20,
+                title: "结束仪式",
+                description: "培训结束仪式",
+                media: "res/img/4.jpg",
+                type: "photo",
+                category: "activity"
+            },
+            {
+                id: 21,
+                title: "结束仪式",
+                description: "培训结束仪式",
+                media: "res/img/5.jpg",
+                type: "photo",
+                category: "activity"
+            },
+            {
+                id: 22,
+                title: "游戏环节",
+                description: "培训结束仪式",
+                media: "res/img/6.jpg",
+                type: "photo",
+                category: "activity"
+            },
         ];
 
         let currentView = 'masonry';
