--- a/index.html
+++ b/index.html
@@ -695,6 +695,14 @@
                 type: "photo",
                 category: "activity"
             },
+            {
+                id: 23,
+                title: "精彩汇报",
+                description: "培训结束仪式",
+                media: "res/img/7.jpg",
+                type: "photo",
+                category: "activity"
+            },
         ];
 
         let currentView = 'masonry';
