--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2025 SYB讲师培训项目组 版权所有</p>
-            <p class="mt-2">联系我们：hysonglet@qq.com</p>
+            <!-- <p class="mt-2">联系我们：hysonglet@qq.com</p> -->
         </div>
     </footer>
 
